fixed responsiveness issue in Posts on mobile device, working as expected

--- a/src/Components/Posts.css
+++ b/src/Components/Posts.css
@@ -18,17 +18,13 @@
 /* media queries */
 
 
-@media(max-width: 992px) {
+@media(max-width: 480px) {
   .posts__container {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media(max-width: 768px) {
-  .posts__container {
-    grid-template-columns: 1fr 1fr;
-    width: 200px;
-    margin-left:  20px;
+    display: grid;
+    margin:40px;
+    grid-template-columns: 1fr;
 
   }
 }
+
+
